--- a/jm_app/pubspec.yaml
+++ b/jm_app/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^0.8.4+4
   http: ^0.13.3
-  flutter_screenutil: ^5.0.0+2
+  flutter_screenutil: ^5.7.0
 
 dev_dependencies:
   flutter_test:
